force-app/main/default/objects/SanaAnalyticsCache__c/SanaAnalyticsCache__c.object-meta.xml
<CustomObject>
    <label>Sana Analytics Cache</label>
    <pluralLabel>Sana Analytics Caches</pluralLabel>
    <description>Stores cached analytics data from Sana Learn API</description>
    <nameField>
        <type>Text</type>
        <label>Cache Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 