force-app/main/default/objects/SanaAnalyticsCache__c/fields/LastUpdated__c.field-meta.xml
<CustomField>
    <fullName>LastUpdated__c</fullName>
    <label>Last Updated</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField> 