force-app/main/default/objects/SanaAnalyticsCache__c/fields/ReportData__c.field-meta.xml
<CustomField>
    <fullName>ReportData__c</fullName>
    <label>Report Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField> 