force-app/main/default/objects/SanaAnalyticsCache__c/fields/ReportType__c.field-meta.xml
<CustomField>
    <fullName>ReportType__c</fullName>
    <label>Report Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField> 